Finished Zombie Walk before threading. Walkspeed is now in seconds, Snowpea now multiply the walk speed timer (new attribute)